# blog-platform

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  admin.html  docker-compose.yml
.github/workflows/: ci.yml
.wrangler/cache/: pages.json  wrangler-account.json
admin/: Cargo.toml  index.html
admin/src/: lib.rs  main.rs
src/: Cargo.toml  errors.rs  handlers.rs  main.rs  models.rs  render.rs  util.rs
src/api/: auth.rs  media.rs  mod.rs  pages.rs  posts.rs  sites.rs  templates.rs
src/ssg/: mod.rs
src/templates/: base.html  feed.xml  index.html  post.html  sitemap.xml
templates/: base.html  feed.xml  index.html  page.html  post.html  sitemap.xml
templates/json/: blog.json  minimal.json  portfolio.json
