[package]
name = "blog-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "validate-request"] }
leptos = { version = "0.6", features = ["serde"] }
leptos_axum = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "json", "chrono"] }
bcrypt = "0.15"
minijinja = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
mime_guess = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
