[package]
name = "blog-platform"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blog-platform"
path = "main.rs"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
leptos = { workspace = true }
leptos_axum = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
sqlx = { workspace = true }
bcrypt = { workspace = true }
minijinja = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true }
